--- a/src/main/resources/templates/usuario/index.html
+++ b/src/main/resources/templates/usuario/index.html
@@ -58,47 +58,66 @@
 		<div class="card-header bg-dark text-white" th:text="${titulo}"></div>
 		<div class="card-body">
 			<form action="#" th:action="@{/usuarios/}" th:object="${usuario}" method="post">
-				<p> Nombre: <input type="text" th:field="*{nombre}" />
-					<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
-					th:errors="*{nombre}" ></small>
-					</p>
-					<p> Apellido: <input type="text" th:field="*{apellido}" />
-						<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}"
-					th:errors="*{apellido}"></small>
-					</p>
-					<p> Tipo documento:
-						<select th:field="*{tipoDocumento}" id="tipoDocumento">
-							<option th:value="D.N.I." th:text="D.N.I" />
-							<option th:value="L.C." th:text="L.C" />
-							<option th:value="L.E." th:text="L.E" />
-						</select>
-							
-					</p>
-					<p> Documento: <input type="number" th:field="*{documento}" />
-						<small class="form-text text-danger" th:if="${#fields.hasErrors('documento')}"
-					th:errors="*{documento}"></small>
-					</p>
+				  <div class="form-group col-md-3">
+				<label>Nombre:</label>
+				<input class="form-control" type="text" th:field="*{nombre}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
+				th:errors="*{nombre}"></small>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Apellido:</label>
+				<input class="form-control" type="text" th:field="*{apellido}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}"
+				th:errors="*{apellido}"></small>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Tipo Documento:</label>
+					<select class="form-control" th:field="*{tipoDocumento}">
+					<option th:value="D.N.I." th:text="D.N.I"/>
+				<option th:value="L.C." th:text="L.C"/>
+				<option th:value="L.E." th:text="L.E"/>
+					</select>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Documento::</label>
+				<input class="form-control" type="number" th:field="*{documento}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('documento')}"
+				th:errors="*{documento}"></small>
+				</div>
 					
-					<p> Correo Electronico: <input type="text" th:field="*{correoElectronico}" />
-						<small class="form-text text-danger" th:if="${#fields.hasErrors('correoElectronico')}"
+				<div class="form-group col-md-3">
+				<label>Correo Electronico:</label>
+				<input class="form-control" type="text" th:field="*{correoElectronico}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('correoElectronico')}"
 					th:errors="*{correoElectronico}"></small>
-					</p>
-					
-					<p> Usuario: <input type="text" th:field="*{nombreDeUsuario}" />
+				</div>
+										
+					<div class="form-group col-md-3">
+				<label>Usuario:</label>
+				<input class="form-control" type="text" th:field="*{nombreDeUsuario}" />
 						<small class="form-text text-danger" th:if="${#fields.hasErrors('nombreDeUsuario')}"
 					th:errors="*{nombreDeUsuario}"></small>
-					</p>
-					
-					<p> Contrasena: <input type="text" th:field="*{contrasena}" />
-						<small class="form-text text-danger" th:if="${#fields.hasErrors('contrasena')}"
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Contrasena:</label>
+				<input class="form-control" type="password" th:field="*{contrasena}" />
+		              <small class="form-text text-danger" th:if="${#fields.hasErrors('contrasena')}"
 					th:errors="*{contrasena}" ></small>
-					</p>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Perfil del Usuario:</label>
+					<select class="form-control" th:field="*{perfiles}" id="perfiles">
+				<option th:each="perfil:${perfiles}"
+					    th:value="${perfil.id}"
+					   th:text="${perfil.rol}"/>
+					   </select>
+				</div>
 					
-					<p> Perfil del Usuario:
-						<select th:field="*{perfiles}" id="perfiles">
-							<option th:each="perfil:${perfiles}" th:value="${perfil.id}" th:text="${perfil.rol}" />
-						</select>	
-					</p>
 					<input type="submit" />
 				</form>
 			</div>
