--- a/src/main/resources/templates/perfil/crear.html
+++ b/src/main/resources/templates/perfil/crear.html
@@ -26,6 +26,11 @@
 					<li class="nav-item">
 						<a class="nav-link" href="/perfiles/lista">Perfiles</a>
 					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/paciente/lista/}">Pacientes</a>
+					</li>
 			
 					<li class="nav-item">
 						<a class="nav-link" href="/logout">Cerrar sesion</a>
