--- a/src/main/resources/templates/paciente/crear.html
+++ b/src/main/resources/templates/paciente/crear.html
@@ -20,11 +20,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-				
 					<li class="nav-item"><a class="nav-link"
 						href="/usuarios/lista">Usuarios</a>
 					</li>
-
 					<li class="nav-item">
 						<a class="nav-link" href="/perfiles/lista">Perfiles</a>
 					</li>
@@ -33,7 +31,7 @@
 						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
 							th:href="@{/paciente/lista/}">Pacientes</a>
 					</li>
-
+			
 					<li class="nav-item">
 						<a class="nav-link" href="/logout">Cerrar sesion</a>
 					</li>
@@ -48,22 +46,24 @@
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 		</div>
 		<div class="alert alert-success alert-dismissable" th:if="${success != null}">
-			<label th:text="${success}"></label>
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-		</div>
-		<div class="alert alert-danger alert-dismissable" th:if="${error != null}">
-			<label th:text="${error}"></label>
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-		</div>
+					<label th:text="${success}"></label>
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+				</div>
+				<div class="alert alert-danger alert-dismissable" th:if="${error != null}">
+					<label th:text="${error}"></label>
+					<button type="button" class="close" data-dismiss="alert">&times;</button>
+				</div>
 	</header>
 
 
-
 	<div class="card bg-light">
-		<div class="card-header bg-dark text-white" th:text="${titulo}"></div>
+		<div class="card-header bg-dark text-white" th:text="${titulo}"> </div>
 		<div class="card-body">
-			<form action="#" th:action="@{/usuarios/}" th:object="${usuario}" method="post">
-				  <div class="form-group col-md-3">
+
+			<form action="#" th:action="@{/paciente/}" th:object="${paciente}" method="post">
+				<input type="hidden" th:field="*{id}" />
+				
+			  <div class="form-group col-md-3">
 				<label>Nombre:</label>
 				<input class="form-control" type="text" th:field="*{nombre}">
 				<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
@@ -76,68 +76,45 @@
 				<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}"
 				th:errors="*{apellido}"></small>
 				</div>
-				
-				<div class="form-group col-md-3">
-				<label>Tipo Documento:</label>
-					<select class="form-control" th:field="*{tipoDocumento}">
-					<option th:value="D.N.I." th:text="D.N.I"/>
-				<option th:value="L.C." th:text="L.C"/>
-				<option th:value="L.E." th:text="L.E"/>
-					</select>
+				  
+				  <div class="form-group col-md-3">
+				<label>Dni:</label>
+				<input class="form-control" type="number" th:field="*{dni}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('dni')}"
+				th:errors="*{dni}"></small>
 				</div>
 				
 				<div class="form-group col-md-3">
-				<label>Documento::</label>
-				<input class="form-control" type="number" th:field="*{documento}">
-				<small class="form-text text-danger" th:if="${#fields.hasErrors('documento')}"
-				th:errors="*{documento}"></small>
-				</div>
-					
-				<div class="form-group col-md-3">
-				<label>Correo Electronico:</label>
-				<input class="form-control" type="text" th:field="*{correoElectronico}">
-				<small class="form-text text-danger" th:if="${#fields.hasErrors('correoElectronico')}"
-					th:errors="*{correoElectronico}"></small>
-				</div>
-										
-					<div class="form-group col-md-3">
-				<label>Usuario:</label>
-				<input class="form-control" type="text" th:field="*{nombreDeUsuario}" />
-						<small class="form-text text-danger" th:if="${#fields.hasErrors('nombreDeUsuario')}"
-					th:errors="*{nombreDeUsuario}"></small>
+				<label>Email:</label>
+				<input class="form-control" type="text" th:field="*{email}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('email')}"
+				th:errors="*{email}"></small>
 				</div>
 				
 				<div class="form-group col-md-3">
-				<label>Contrasena:</label>
-				<input class="form-control" type="password" th:field="*{contrasena}" />
-		              <small class="form-text text-danger" th:if="${#fields.hasErrors('contrasena')}"
-					th:errors="*{contrasena}" ></small>
+				<label>Observaciones:</label>
+				<input class="form-control" type="text" th:field="*{observaciones}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('observaciones')}"
+				th:errors="*{observaciones}"></small>
 				</div>
-				
-				<div class="form-group col-md-3">
-				<label>Perfil del Usuario:</label>
-					<select class="form-control" th:field="*{perfiles}" id="perfiles">
-				<option th:each="perfil:${perfiles}"
-					    th:value="${perfil.id}"
-					   th:text="${perfil.rol}"/>
-					   </select>
-				</div>
-					
-					<input type="submit" />
-				</form>
-			</div>
-		</div>
 
-	
+				<input type="submit" />
+			</form>
+		</div>
+	</div>
+
+	<div class="container"> </div>
+
 	<footer th:fragment="footer" class="bg-info text-center text-white fixed-bottom">
 		<div class="container">
-		<p>Consultorio</p>
+			<p>Consultorio</p>
 		</div>
-		
+
 		<script type="text/javascript" th:src="@{vendor/bootstrap/jquery/jquery.slim.min.js}"></script>
 		<script type="text/javascript" th:src="@{vendor/bootstrap/js/popper.min.js}"></script>
 		<script type="text/javascript" th:src="@{vendor/bootstrap/js/bootstrap.min.js}"></script>
 	</footer>
-	
+
 </body>
+
 </html>
