--- a/src/main/resources/templates/usuario/lista.html
+++ b/src/main/resources/templates/usuario/lista.html
@@ -28,7 +28,11 @@
 						<a class="nav-link" href="/perfiles/lista">Perfiles</a>
 					</li>
 					
-
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/paciente/lista/}">Pacientes</a>
+					</li>
+					
 					<li class="nav-item">
 						<a class="nav-link" href="/logout">Cerrar sesion</a>
 					</li>
