--- a/src/main/resources/templates/especialidad/crear.html
+++ b/src/main/resources/templates/especialidad/crear.html
@@ -65,13 +65,14 @@
 		<div class="card-header bg-dark text-white" th:text="${titulo}"> </div>
 		<div class="card-body">
 
-			<form action="#" th:action="@{/perfiles/}" th:object="${perfil}" method="post">
+			<form action="#" th:action="@{/especialidad/}" th:object="${especialidad}" method="post">
 				<input type="hidden" th:field="*{id}" />
-					<div class="form-group col-md-3">
-				<label>Rol del Perfil:</label>
-				<input class="form-control" type="text" th:field="*{rol}">
-				<small class="form-text text-danger" th:if="${#fields.hasErrors('rol')}"
-				th:errors="*{rol}"></small>
+				
+			  <div class="form-group col-md-3">
+				<label>Nombre:</label>
+				<input class="form-control" type="text" th:field="*{nombre}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
+				th:errors="*{nombre}"></small>
 				</div>
 
 				<input type="submit" />
