--- a/src/main/resources/templates/usuario/form.html
+++ b/src/main/resources/templates/usuario/form.html
@@ -36,6 +36,11 @@
 						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
 							th:href="@{/especialidad/lista/}">Especialidad</a>
 					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
 
 					<li class="nav-item">
 						<a class="nav-link" href="/logout">Cerrar sesion</a>
