--- a/src/main/resources/templates/especialista/crear.html
+++ b/src/main/resources/templates/especialista/crear.html
@@ -70,14 +70,40 @@
 		<div class="card-header bg-dark text-white" th:text="${titulo}"> </div>
 		<div class="card-body">
 
-			<form action="#" th:action="@{/perfiles/}" th:object="${perfil}" method="post">
-				<input type="hidden" th:field="*{id}" />
-					<div class="form-group col-md-3">
-				<label>Rol del Perfil:</label>
-				<input class="form-control" type="text" th:field="*{rol}">
-				<small class="form-text text-danger" th:if="${#fields.hasErrors('rol')}"
-				th:errors="*{rol}"></small>
+			<form action="#" th:action="@{/especialista/}" th:object="${especialista}" method="post">
+				<input type="hidden" th:field="*{idEspecialista}" />
+				
+			  <div class="form-group col-md-3">
+				<label>Nombre:</label>
+				<input class="form-control" type="text" th:field="*{nombre}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
+				th:errors="*{nombre}"></small>
 				</div>
+				
+				 <div class="form-group col-md-3">
+				<label>Apellido:</label>
+				<input class="form-control" type="text" th:field="*{apellido}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('apellido')}"
+				th:errors="*{apellido}"></small>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>DNI:</label>
+				<input class="form-control" type="number" th:field="*{dni}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('dni')}"
+				th:errors="*{dni}"></small>
+				</div>
+				
+				<div class="form-group col-md-3">
+				<label>Especialidad</label>
+				<select class="form-control" th:field="*{especialidad.idEspecialidad}" id="especialidad">
+				<option th:if="!${especialista.idEspecialista}" value="0">Seleccione una especialidad</option>
+				<option th:each="esp:${especialidad}"
+					    th:value="${esp.idEspecialidad}"
+					   th:text="${esp.nombre}"/></p>
+				</select>
+				</div>
+					
 
 				<input type="submit" />
 			</form>
