--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -54,6 +54,11 @@
 							th:href="@{/especialidad/lista/}">Especialidad</a>
 					</li>
 					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
+					
 					<li class="nav-item dropdown">
 						<a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle"
 							data-toggle="dropdown" href="#" id="navbarDropdownBlog">Sesion</a>
