--- a/src/main/resources/templates/usuario/lista.html
+++ b/src/main/resources/templates/usuario/lista.html
@@ -39,6 +39,11 @@
 					</li>
 					
 					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
+					
+					<li class="nav-item">
 						<a class="nav-link" href="/logout">Cerrar sesion</a>
 					</li>
 
