Agrego validaciones en pacientes

--- a/src/main/resources/templates/paciente/lista.html
+++ b/src/main/resources/templates/paciente/lista.html
@@ -95,7 +95,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="li:${lista}">
+				<tr class="table-info" th:each="li:${lista}">
 
 					<th scope="row" th:text="${li.nombre}"></th>
 					<th scope="row" th:text="${li.apellido}"></th>
