--- a/src/main/resources/templates/perfil/lista.html
+++ b/src/main/resources/templates/perfil/lista.html
@@ -91,7 +91,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="li:${lista}">
+				<tr class="table-info" th:each="li:${lista}">
 
 					<th scope="row" th:text="${li.rol}"></th>
 
