--- a/src/main/resources/templates/paciente/lista.html
+++ b/src/main/resources/templates/paciente/lista.html
@@ -24,27 +24,34 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 
-					<li class="nav-item"><a class="nav-link"
-						href="/usuarios/lista">Usuarios</a>
+				<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
+							th:href="@{/usuarios/lista/}">Usuarios</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="/perfiles/lista">Perfiles</a>
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
+							th:href="@{/perfiles/lista/}">Perfiles</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/paciente/lista/}">Pacientes</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialidad/lista/}">Especialidad</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/turno/lista/}">Turnos</a>
 					</li>
 
 					<li class="nav-item"><a class="nav-link" href="/logout">Cerrar
