--- a/src/main/resources/templates/especialidad/crear.html
+++ b/src/main/resources/templates/especialidad/crear.html
@@ -20,26 +20,34 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link"
-						href="/usuarios/lista">Usuarios</a>
+			<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
+							th:href="@{/usuarios/lista/}">Usuarios</a>
 					</li>
+
 					<li class="nav-item">
-						<a class="nav-link" href="/perfiles/lista">Perfiles</a>
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
+							th:href="@{/perfiles/lista/}">Perfiles</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/paciente/lista/}">Pacientes</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialidad/lista/}">Especialidad</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/turno/lista/}">Turnos</a>
 					</li>
 			
 					<li class="nav-item">
@@ -78,6 +86,20 @@
 				<input class="form-control" type="text" th:field="*{nombre}">
 				<small class="form-text text-danger" th:if="${#fields.hasErrors('nombre')}"
 				th:errors="*{nombre}"></small>
+				</div>
+				
+				 <div class="form-group col-md-3">
+				<label>Hora Inicio:</label>
+				<input class="form-control" type="time" th:field="*{horaInicio}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('horaInicio')}"
+				th:errors="*{horaInicio}"></small>
+				</div>
+				 
+				 <div class="form-group col-md-3">
+				<label>Hora Fin:</label>
+				<input class="form-control" type="time" th:field="*{horaFin}">
+				<small class="form-text text-danger" th:if="${#fields.hasErrors('horaFin')}"
+				th:errors="*{horaFin}"></small>
 				</div>
 
 				<input type="submit" />
