--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -35,28 +35,33 @@
 				<ul class="navbar-nav ml-auto">
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/usuarios/lista/}">Usuarios</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/perfiles/lista/}">Perfiles</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/paciente/lista/}">Pacientes</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialidad/lista/}">Especialidad</a>
 					</li>
 					
 					<li class="nav-item">
-						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+						<a class="nav-link" sec:authorize="hasAuthority('Administrador')"
 							th:href="@{/especialista/lista/}">Especialista</a>
+					</li>
+					
+					<li class="nav-item">
+						<a class="nav-link" sec:authorize="hasAnyAuthority('Auditor', 'Administrador')"
+							th:href="@{/turno/lista/}">Turnos</a>
 					</li>
 					
 					<li class="nav-item dropdown">
