--- a/src/main/resources/templates/especialista/crear.html
+++ b/src/main/resources/templates/especialista/crear.html
@@ -114,18 +114,44 @@
 				
 					 <div class="form-group col-md-3">
 				<label>Hora Inicio:</label>
-				<input class="form-control" type="time" th:field="*{horaInicio}">
+				<input class="form-control" type="time" name="limitetiempo" list="listalimitestiempo" th:field="*{horaInicio}">
 				<small class="form-text text-danger" th:if="${#fields.hasErrors('horaInicio')}"
 				th:errors="*{horaInicio}"></small>
 				</div>
 				 
 				 <div class="form-group col-md-3">
 				<label>Hora Fin:</label>
-				<input class="form-control" type="time" th:field="*{horaFin}">
+				<input class="form-control" type="time" name="limitetiempo" list="listalimitestiempo" th:field="*{horaFin}">
 				<small class="form-text text-danger" th:if="${#fields.hasErrors('horaFin')}"
 				th:errors="*{horaFin}"></small>
 				</div>
-					
+				
+				<datalist id="listalimitestiempo">
+  				<option value="00:00">
+  				<option value="01:00">
+  				<option value="02:00">
+  				<option value="03:00">
+  				<option value="04:00">
+  				<option value="05:00">
+  				<option value="06:00">
+  				<option value="07:00">
+  				<option value="08:00">
+  				<option value="09:00">
+  				<option value="10:00">
+  				<option value="11:00">
+				<option value="12:00">
+  				<option value="13:00">
+  				<option value="14:00">
+  				<option value="15:00">
+  				<option value="16:00">
+  				<option value="17:00">
+  				<option value="18:00">
+  				<option value="19:00">
+  				<option value="20:00">
+  				<option value="21:00">
+  				<option value="22:00">
+  				<option value="23:00">
+			</datalist>
 
 				<input type="submit" />
 			</form>
